--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,13 @@
 Package: btwkandidaten2021
-Title: What the Package Does (One Line, Title Case)
+Title: Aufbereiteter Datensatz der Direkt- und Listenkandidat:innen zur Bundestagswahl 2021
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Ansgar",
+           family = "Wolsing",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: MIT + file LICENSE
+           email = "ansgar.wolsing@gmail.com")
+Description: Aufbereiteter Datensatz der Direkt- und Listenkandidat:innen zur Bundestagswahl 2021.
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
@@ -18,3 +17,5 @@ Suggests:
 Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
+Imports: 
+    dplyr
