Added source information to readme and description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "ansgar.wolsing@gmail.com")
 Description: Aufbereiteter Datensatz der Direkt- und Listenkandidat:innen zur Bundestagswahl 2021.
+  Quelle: Bundeswahlleiter (Stand 03.09.2021).
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
